# Armv8-Tetris

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
datatransfer.dSYM/Contents/: Info.plist
datatransfer.dSYM/Contents/Resources/DWARF/: datatransfer
datatransfer.dSYM/Contents/Resources/Relocations/aarch64/: datatransfer.yml
extension/: CMakeLists.txt
extension/src/: CMakeLists.txt  game.c  random_piece.c  random_piece.h  raylib_main.c  screen_ending.c  screen_gameplay.c  screen_logo.c  screen_options.c  screen_title.c  seven_bag.c  tetrominoes.c
extension/tetris/: .gitignore  CMakeLists.txt
extension/tetris/src/: CMakeLists.txt  game.c  random_piece.h  raylib_main.c  screen_ending.c  screen_gameplay.c  seven_bag.c  seven_bag.h
programs/: led_blink.s
src/: CMakeLists.txt  assemble.c  bitmanipulation.c  bitmanipulation.h  branch.c  branch.h  dataprocessing.c  dataprocessing.h  datatransfer.c  datatransfer.h  debug.h  emulate.c  instruction_set.c  instruction_set.h  loader.c  memory.c  memory.h  registers.c  registers.h  shifter.c  shifter.h  types.h  util.c  util.h
src/Tetris/: my_app
src/Tetris/src/: CMakeLists.txt  Makefile  game  game.c  game.h  main  main.c  my_app  network.c  random_piece.c  random_piece.h  raylib_game.c  screen_gameplay.c  tempCodeRunnerFile.c  tetriminoes.c  tetriminoes.h  tetriminoes.h.gch  tetris
src/Tetris/src/main.dSYM/Contents/Resources/DWARF/: main
src/Tetris/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/assemble/: CMakeLists.txt  assemble.c  branch_assembly.c  branch_assembly.h  common_types.h  data_processing_assembly.c  data_processing_assembly.h  directives.c  directives.h  line_reader.c  line_reader.h  loadstore.c  loadstore.h  opcode_table.c  opcode_table.h  parsing_common.c  parsing_common.h  symbol_table.c  symbol_table.h
src/emulate/: CMakeLists.txt  Makefile  bitmanipulation.c  bitmanipulation.h  branch.c  branch.h  dataprocessing.c  dataprocessing.h  datatransfer.c  datatransfer.h  emulate.c  memory.c  memory.h  registers.c  registers.h
src/instructions/: branch.c  branch.h  data_processing.c  data_processing.h  dataprocessing.c  dataprocessing.h  datatransfer.c  datatransfer.h  shifter.c  shifter.h  special.c  special.h
src/tetris/src/: Makefile  game.c  game.h  random_piece.c  random_piece.h  raylib_main.c  screen_ending.c  screen_gameplay.c  screen_options.c  screens.h  seven_bag.c  seven_bag.h  tetriminoes.c  tetriminoes.h  tetrominoes.h  types.h
